# jedi-academy

./: README.txt  TODO
code/: CMakeLists.txt
code/0_compiled_first/: 0_SH_Leak.cpp
code/RMG/: RM_InstanceFile.cpp  RM_Instance_BSP.cpp  RM_Instance_Group.cpp  RM_Instance_Random.cpp  RM_Manager.cpp  RM_Mission.cpp  RM_Objective.cpp  RM_Path.cpp  RM_Path.h  RM_Terrain.cpp
code/Ragl/: graph_region.h  graph_triangulate.h  graph_vs.h  ragl_common.h
code/Ratl/: map_vs.h  queue_vs.h  ratl_common.h  string_vs.h
code/Ravl/: CVec.h
code/Rufl/: hfile.cpp  hstring.cpp
code/cgame/: FxPrimitives.cpp  FxScheduler.cpp  FxScheduler.h  FxTemplate.cpp  cg_camera.cpp  cg_credits.cpp  cg_draw.cpp  cg_ents.cpp  cg_event.cpp  cg_main.cpp  cg_players.cpp  cg_predict.cpp  cg_servercmds.cpp  cg_syscalls.cpp  cg_view.cpp  cg_weapons.cpp
code/client/: cl_cgame.cpp  cl_cin.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_ui.cpp  client.h  snd_ambient.cpp  snd_dma.cpp  snd_dma_console.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_music.cpp  vmachine.cpp  vmachine.h
code/ff/: ff_ChannelSet.cpp  ff_ConfigParser.cpp  ff_MultiSet.cpp  ff_ffset.cpp  ff_local.h  ff_system.cpp
code/game/: AI_Animal.cpp  AI_GalakMech.cpp  AI_HazardTrooper.cpp  AnimalNPC.cpp  FighterNPC.cpp  G_Timer.cpp  NPC_reactions.cpp  NPC_senses.cpp  NPC_spawn.cpp  NPC_stats.cpp  NPC_utils.cpp  Q3_Interface.cpp  Q3_Interface.h  SpeederNPC.cpp  b_local.h  b_public.h  bg_lib.cpp  bg_panimate.cpp  bg_pmove.cpp  bg_public.h  bg_vehicleLoad.cpp  common_headers.h  fields.h  g_active.cpp  g_breakable.cpp  g_client.cpp  g_cmds.cpp  g_combat.cpp  g_fx.cpp  g_headers.h  g_local.h  g_main.cpp  g_missile.cpp  g_mover.cpp  g_navigator.cpp  g_public.h  g_rail.cpp  g_ref.cpp  g_roff.cpp  g_roff.h  (+13 more)
code/ghoul2/: G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp
code/goblib/: goblib.cpp
code/icarus/: BlockStream.cpp  BlockStream.h  IcarusImplementation.cpp  IcarusInterface.h  Sequence.cpp  Sequencer.cpp  TaskManager.cpp
code/jpeg-6/: jinclude.h
code/mp3code/: mp3struct.h
code/png/: png.cpp  png.h
code/qcommon/: MiniHeap.h  cm_draw.cpp  cm_draw.h  cm_load.cpp  cm_load_xbox.cpp  cm_patch.cpp  cm_polylib.cpp  cm_terrain.cpp  cm_test.cpp  cm_trace.cpp  common.cpp  files_common.cpp  files_console.cpp  files_pc.cpp  md4.cpp  msg.cpp  sstring.h  stv_version.h
code/renderer/: mdx_format.h  qgl.h  tr_WorldEffects.cpp  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_draw.cpp  tr_font.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_mesh.cpp  tr_model.cpp  tr_public.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_terrain.cpp  tr_types.h  tr_world.cpp
code/sdl/: sdl_glimp.cpp  sdl_input.cpp
code/server/: server.h  sv_client.cpp  sv_game.cpp  sv_savegame.cpp  sv_world.cpp
code/ui/: gameinfo.cpp  ui_debug.cpp  ui_main.cpp  ui_public.h  ui_shared.cpp  ui_shared.h  ui_syscalls.cpp
code/unix/: linux_glimp.cpp  linux_qgl.cpp  unix_local.h  unix_main.cpp  unix_net.c  unix_shared.c  unix_shared.cpp
code/win32/: win_filecode.cpp  win_glimp.cpp  win_glimp_console.cpp  win_main_console.cpp
code/zlib32/: deflate.cpp  deflate.h  inflate.cpp  inflate.h  zip.h  zipcommon.cpp
codemp/: CMakeLists.txt
codemp/RMG/: RM_InstanceFile.cpp  RM_Instance_Group.cpp  RM_Instance_Random.cpp  RM_Manager.cpp  RM_Mission.cpp  RM_Objective.cpp  RM_Path.cpp  RM_Terrain.cpp
codemp/Ratl/: ratl_common.h
codemp/Splines/: q_parse.cpp  q_shared.cpp  util_str.cpp
codemp/botlib/: be_aas_main.cpp  be_aas_reach.cpp  be_ai_goal.cpp  l_precomp.cpp  l_script.cpp
codemp/cgame/: cg_consolecmds.c  cg_draw.c  cg_ents.c  cg_event.c  cg_local.h  cg_main.c  cg_players.c  cg_servercmds.c  cg_turret.c  cg_view.c  cg_weaponinit.c  tr_types.h
codemp/client/: 0_SH_Leak.cpp  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxTemplate.cpp  cl_cin.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  client.h  snd_ambient.cpp  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_music.cpp
codemp/game/: NPC_misc.c  SpeederNPC.c  bg_misc.c  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_vehicles.h  bg_weapons.h  g_ICARUScb.c  g_active.c  g_arenas.c  g_cmds.c  g_items.c  g_local.h  g_main.c  g_public.h  g_syscalls.c  g_team.c  q_math.c  q_shared.c  q_shared.h  teams.h  w_saber.h
codemp/ghoul2/: G2_bolts.cpp  G2_bones.cpp  G2_misc.cpp  G2_surfaces.cpp
codemp/icarus/: GameInterface.cpp  Instance.cpp  Interpreter.cpp  Q3_Interface.cpp  Sequencer.cpp  Tokenizer.cpp  icarus.h  interpreter.h
codemp/mp3code/: mp3struct.h  towave.c
codemp/null/: null_glimp.cpp  null_snddma.cpp  win_main.cpp
codemp/qcommon/: GenericParser2.cpp  RoffSystem.cpp  cm_draw.cpp  cm_draw.h  cm_load.cpp  cm_load_xbox.cpp  cm_patch.cpp  cm_terrain.cpp  cm_terrainmap.h  cmd_common.cpp  common.cpp  cvar.cpp  files.cpp  files_common.cpp  files_console.cpp  files_pc.cpp  msg.cpp  net_chan.cpp  platform.h  qcommon.h  stringed_ingame.cpp  timing.h  vm.cpp  vm_x86.cpp
codemp/renderer/: mdx_format.h  qgl.h  tr_WorldEffects.cpp  tr_bsp.cpp  tr_font.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_main.cpp  tr_model.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_terrain.cpp
codemp/sdl/: sdl_gamma.cpp  sdl_glimp.cpp  sdl_input.cpp  sdl_local.h
codemp/server/: sv_bot.cpp  sv_client.cpp  sv_main.cpp
codemp/server/NPCNav/: navigator.h
codemp/ui/: ui_atoms.c  ui_main.c  ui_players.c  ui_public.h  ui_shared.c
codemp/unix/: files_linux.cpp  linux_common.c  linux_glimp.c  linux_glimp.cpp  linux_local.h  linux_qgl.cpp  unix_glimp_common.cpp  unix_glw.h  unix_main.cpp  unix_shared.cpp
codemp/win32/: win_filecode.cpp  win_glimp.cpp  win_glimp_console.cpp  win_main.cpp  win_main_console.cpp
